# django-modern-rest

./: .gitignore  .importlinter  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  THIRD-PARTY-NOTICES.txt  build.py  cibuildwheel.toml  context7.json  django_modern_rest_pytest.py  dmr_pytest.py  docker-compose.yml  ex.py  justfile  litestar.md  lychee.toml  pyproject.toml  schemathesis.toml  setup.cfg
.agents/skills/dmr/: SKILL.md
.agents/skills/dmr-from-django-ninja/: SKILL.md
.agents/skills/dmr-from-drf/: SKILL.md
.agents/skills/dmr-openapi-skeleton/: SKILL.md
.claude-plugin/: marketplace.json
.github/: AI_POLICY.md  SECURITY.md  bake.toml  dependabot.yml  lychee.toml  pull_request_template.md  renovate.json5
.github/ISSUE_TEMPLATE/: Bug.yaml  Feature.md  config.yml
.github/workflows/: build-pr-matrix.sh  build-release-matrix.sh  build-wheels.yml  build_wheels.yml  codspeed.yml  lychee.yml  relator.yml  reproduce-django-50.yml  test-extras.yml  test.yml
benchmarks/: Makefile  README.md  conftest.py  draw_charts.py  justfile  payload.json  requirements.txt  run_benchmark.py  test_benchmarks.py
benchmarks/apps/: dmr.py  drf.py  fastapi.py  ninja.py
benchmarks/features/: url_resolver.py
benchmarks/tests/test_compiled/: conftest.py  test_negotiation.py  test_security.py  test_sse_renderer.py
benchmarks/tests/test_router/: test_path.py
benchmarks/tests/test_serializers/: test_pydantic_serializer.py
django_modern_rest/: __init__.py  components.py  controller.py  cookies.py  decorators.py  django.py  endpoint.py  envs.py  errors.py  exceptions.py  files.py  headers.py  json.py  meta.py  metadata.py  negotiation.py  options_mixins.py  pagination.py  parsers.py  renderers.py  request_parser.py  response.py  responses.py  routing.py  serialization.py  serializer.py  settings.py  test.py  testing.py  types.py  validation.py
django_modern_rest/_pytest_plugin/: pyproject.toml
django_modern_rest/internal/: cache.py  django.py  json.py  middleware_wrapper.py  negotiation.py  preferred_type.py  strings.py  types.py
django_modern_rest/internal/json/: __init__.py  msgspec.py  raw.py
django_modern_rest/openapi/: __init__.py  collector.py  components.py  config.py  converter.py  generator.py  mappers.py  markers.py  normalization.py  normalizers.py  renderers.py  schema.py  setup.py  spec.py  type_mapping.py  types.py  views.py
django_modern_rest/openapi/builders/: __init__.py  operation.py
django_modern_rest/openapi/core/: builder.py  context.py  extractor.py  merger.py  registry.py
django_modern_rest/openapi/extractors/: __init__.py  base.py  pydantic.py  pydantic_extractor.py  stdlib.py
django_modern_rest/openapi/generator/: collector.py  new_collector.py  path_item.py
django_modern_rest/openapi/generators/: __init__.py  component.py  header.py  operation.py  parameter.py  path_item.py  request_body.py  response.py  schema.py
django_modern_rest/openapi/objects/: __init__.py  (+32 more)
django_modern_rest/plugins/: msgspec.py  pydantic.py
django_modern_rest/security/: __init__.py  base.py  http.py  session.py
django_modern_rest/validation/: __init__.py  blueprint.py  controller.py  endpint_metadata.py  endpoint_metadata.py  payload.py  response.py
django_test_app/: manage.py  mypy.ini
django_test_app/django_test_app/: settings.py  urls.py
django_test_app/rest_app/: middleware.py  views.py
django_test_app/server/: asgi.py  settings.py  urls.py  wsgi.py
dmr/: __init__.py  apps.py  compiled.py  components.py  controller.py  cookies.py  decorators.py  endpoint.py  envs.py  errors.py  exceptions.py  files.py  headers.py  metadata.py  negotiation.py  options_mixins.py  pagination.py  parsers.py  problem_details.py  renderers.py  response.py  routing.py  serializer.py  settings.py  sse.py  test.py  types.py
dmr/_compiled/: README.md  negotiation.py  routing.py  security.py  sse.py
dmr/compiled/: README.md  __init__.py  negotiation.py
dmr/internal/: _negotiation.py  cache.py  context.py  django.py  endpoint.py  enums.py  io.py  json.py  media_compat.py  middleware_wrapper.py  negotiation.py  schema.py  test.py  types.py  yaml.py
dmr/openapi/: __init__.py  collector.py  config.py  converter.py  dump.py  mappers.py  spec.py  types.py  views.py
dmr/security/: __init__.py  _csrf.py  base.py  http.py  types.py
dmr/sse/: __init__.py  builder.py  controller.py  exceptions.py  metadata.py  renderer.py  stream.py  validation.py
dmr/streaming/: __init__.py  controller.py  exceptions.py  metadata.py  renderer.py  stream.py  validation.py
dmr/throttling/: __init__.py  algorithms.py  backends.py  base.py  cache_keys.py  headers.py  lua.py
dmr/validation/: __init__.py  blueprint.py  controller.py  endpoint_metadata.py  payload.py  response.py  settings.py
docs/: Makefile  conf.py  index.rst  justfile  make.bat
docs/_templates/: badges.html  github.html  moreinfo.html
docs/pages/: authentication.rst  bring-your-own-di.rst  changelog.rst  components.rst  configuration.rst  core-concepts.rst  error-handling.rst  getting-started.rst  integrations.rst  internalization.rst  internationalization.rst  micro-framework.rst  middleware.rst  negotiation.rst  openapi.rst  performance.rst  plugins.rst  queryset.rst  returning-responses.rst  reusable-code.rst  routing.rst  spec-first.rst  sse.rst  testing.rst  throttling.rst  using-controller.rst  validation.rst
licenses/: README.md  redoc.txt  scalar-api-reference.txt  stoplight-elements.txt  swagger-ui.txt
tests/: conftest.py
tests/infra/: streaming.py  xml_format.py
tests/plugins/: tracecov.py
tests/test_example/: test_some_function.py
tests/test_integration/: conftest.py  test404.py  test_client_csrf.py  test_controllers.py  test_export_schema.py  test_middleware.py  test_models_example.py  test_not_found_view.py
tools/: __init__.py
tools/sphinx_ext/: __init__.py  chartjs.py  missing_references.py  run_examples.py
typesafety/assert_type/: test_controller.py  test_modify_and_validate.py  test_msgspec.py  test_routing.py  test_sse_decorator.py
(+872 files in other folders)
