[build-system]
requires = ["poetry-core>=2.1"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "django-modern-rest"
description = "Modern REST framework for Django with types and async support"
license = "MIT"
version = "0.1.0"
requires-poetry = ">=2.2"

authors = [
  "Nikita Sobolev <mail@sobolevn.me>",
  "Alexander Kondratev <mail@kondratev.dev>",
  "Alexey Potapov <me@black-as-ink.ru>",
]

readme = "README.md"

repository = "https://github.com/wemake-services/django-modern-rest"

keywords = [
  "django",
  "django plugin",
  "djangorestframework",
  "django-api",
  "API",
  "REST",
  "wemake-python-package",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Framework :: Django",
  "Framework :: Django :: 5.2",
  "Framework :: Django :: 6.0",
]

packages = [
  { include = "django_modern_rest_pytest.py" }
]


[tool.poetry.dependencies]
python = "^3.11"
typing_extensions = ">=4"
django = ">=5.2,<6.0"

msgspec = { version = ">=0.19", optional = true }
pydantic = { version = "^2.12", optional = true, extras = ["email"] }
pyjwt = { version = ">=2.11", optional = true }
cryptography = { version = ">=46.0", optional = true }

[tool.poetry.extras]
pydantic = ["pydantic"]
msgspec = ["msgspec"]
jwt = ["pyjwt", "cryptography"]

[tool.poetry.group.dev.dependencies]
django = "^5.2"
django-stubs = { version = "5.2.9", extras = ["compatible-mypy"] }
types-docutils = "^0.22"
types-xmltodict = "^1.0"
pyright = "^1.1"
pyrefly = ">=0.49,<0.51"

codespell = "^2.4"
wemake-python-styleguide = "^1.4"
ruff = "^0.14"
import-linter = "^2.5"
slotscheck = "^0.19"

pytest = "^9.0"
pytest-cov = "^7.0"
covdefaults = "^2.3"
pytest-randomly = "^4.0"
pytest-django = "^4.8"
pytest-asyncio = "^1.2"
pytest-custom-exit-code = "^0.3"
pytest-freezer = "^0.4"
dirty-equals = "^0.11"
faker = "^40.1"
inline-snapshot = "^0.31"
schemathesis = "^4.3"
polyfactory = "^3.2"

httpx = "^0.28"
xmltodict = "^1.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = ">=8.2,<10.0"
sphinx-autodoc-typehints = "^3.0"
sphinx-iconify = "^0.3"
sphinx-tabs = "^3.4"
sphinx-contributors = "^0.2"
sphinx-copybutton = "^0.5"
sphinx-design = ">=0.6,<0.8"
sphinxcontrib-mermaid = "^2.0"
myst-parser = "^5.0"
shibuya = "^2026.1"
# TODO: remove when `sphinx-tabs` is fixed:
# https://github.com/executablebooks/sphinx-tabs/issues/212
docutils = "0.21.2"

# Needed for our extension:
uvicorn = "^0.40"
httpx = "^0.28"

# Needed for examples:
xmltodict = "^1.0"


[tool.poetry.plugins."pytest11"]
# We need this structure because otherwise `pytest` ruins the coverage report.
# This happens because we have imports in `django_modern_rest/__init__.py`
django_modern_rest = "django_modern_rest_pytest"


[tool.ruff]
# Ruff config: https://docs.astral.sh/ruff/settings
preview = true
fix = true
target-version = "py311"
line-length = 80

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint]
select = [
  "A",    # flake8-builtins
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "C90",  # maccabe
  "COM",  # flake8-commas
  "D",    # pydocstyle
  "DTZ",  # flake8-datetimez
  "E",    # pycodestyle
  "ERA",  # flake8-eradicate
  "EXE",  # flake8-executable
  "F",    # pyflakes
  "FBT",  # flake8-boolean-trap
  "FLY",  # pyflint
  "FURB", # refurb
  "G",    # flake8-logging-format
  "I",    # isort
  "ICN",  # flake8-import-conventions
  "ISC",  # flake8-implicit-str-concat
  "LOG",  # flake8-logging
  "N",    # pep8-naming
  "PERF", # perflint
  "PIE",  # flake8-pie
  "PL",   # pylint
  "PT",   # flake8-pytest-style
  "PTH",  # flake8-use-pathlib
  "Q",    # flake8-quotes
  "RET",  # flake8-return
  "RSE",  # flake8-raise
  "RUF",  # ruff
  "S",    # flake8-bandit
  "SIM",  # flake8-simpify
  "SLF",  # flake8-self
  "SLOT", # flake8-slots
  "T100", # flake8-debugger
  "TRY",  # tryceratops
  "UP",   # pyupgrade
  "W",    # pycodestyle
  "YTT",  # flake8-2020
]
ignore = [
  "A005",   # allow to shadow stdlib and builtin module names
  # Different doc rules that we don't really care about:
  "D100",
  "D104",
  "D106",
  "D203",
  "D212",
  "D401",
  "D404",
  "D405",
  "D418",  # We should be able to add docstrings to `@overload` decorators
  "ISC001",  # implicit string concat conflicts with `ruff format`
  "ISC003",  # prefer explicit string concat over implicit concat
  "PLR09",   # we have our own complexity rules
  "PLR2004", # do not report magic numbers
  "PLR6301", # do not require classmethod / staticmethod when self not used
  "PLC0414", # do not raise on `as` re-exports
  "TRY003",  # long exception messages from `tryceratops`
  "RUF067",  # wps handles `__init__.py` logic better
]
external = [ "WPS" ]

# Plugin configs:
flake8-quotes.inline-quotes = "single"
mccabe.max-complexity = 6
pydocstyle.convention = "google"

# For `django_test_app` only:
isort.known-first-party = ["server", "examples"]

[tool.ruff.lint.per-file-ignores]
# Allow imports inside fixtures:
"django_modern_rest_pytest.py" = ["PLC0415"]
# Do not require docstrings in test project:
"django_test_app/**/*.py" = ["D10"]
# Ignore many rules in autogenerated migrations:
"django_test_app/server/apps/*/migrations/*.py" = ["E501", "RUF012"]
# Allow asserts and private name imports and access for tests:
"tests/*.py" = ["S101", "SLF001", "PLC2701", "RUF012"]
# Allow examples to be a bit less strict:
"docs/examples/**/*.py" = ["D1", "S1"]
# Allow benchmarks to not have docs and do scripting:
"benchmarks/**/*.py" = ["D", "S"]


[tool.pytest.ini_options]
# Django options:
# https://pytest-django.readthedocs.io/en/latest/
DJANGO_SETTINGS_MODULE = "server.settings"

# pytest config: http://doc.pytest.org/en/latest/customize.html

# Strict `@xfail` by default:
xfail_strict = true
# Fail on warnings:
filterwarnings = ["error"]

# PYTHONPATH configuration:
pythonpath = ["django_test_app"]

addopts = [
  "--strict-config",
  "--strict-markers",
  "--doctest-modules",
  "--doctest-glob=*.rst",
  "--doctest-glob=README.md",
  # Output:
  "--tb=short",
  # Coverage:
  "--cov=django_modern_rest",
  "--cov=django_test_app",
  "--cov=tests",
  "--cov-report=term-missing:skip-covered",
  "--cov-report=html",
  "--cov-report=xml",
  "--cov-branch",
  "--cov-fail-under=100",
  # Ignores benchmarks:
  "--ignore=benchmarks/",
  # Ignores docs:
  "--ignore=docs/conf.py",
  "--ignore=docs/examples/",
  "--ignore=docs/tools/",
  "--ignore=docs/_build/",
  # Ignores typesafety tests:
  "--ignore=typesafety/assert_type",
  # Ignores optional deps:
  "--ignore=django_modern_rest/plugins/msgspec",
]


[tool.coverage.run]
# Covdefaults: https://pypi.org/project/covdefaults
plugins = ["covdefaults"]


[tool.mypy]
# The mypy configurations: http://bit.ly/2zEl9WI
ignore_missing_imports = true
strict = true
strict_bytes = true
local_partial_types = true
warn_unreachable = true

exclude = [
  # It has its own type-checking setup, since uses django:
  "django_test_app/",
  # We don't care about benchmark code:
  "benchmarks/",
  # We don't care about built docs:
  "docs/_build/",
]

enable_error_code = [
  "truthy-bool",
  "truthy-iterable",
  "redundant-expr",
  "unused-awaitable",
  "ignore-without-code",
  "possibly-undefined",
  "redundant-self",
  "explicit-override",
  "unimported-reveal",
  "deprecated",
]

plugins = [
  "pydantic.mypy",
]


[tool.pyright]
# Docs: https://microsoft.github.io/pyright/#/configuration
include = ["django_modern_rest", "typesafety", "tests"]
exclude = ["django_modern_rest/internal/json/msgspec.py"]
strict = ["django_modern_rest/**/*"]
venvPath = "."
venv = ".venv"


[tool.pyrefly]
ignore-missing-imports = ["*"]
project-includes = ["django_modern_rest", "typesafety"]


[tool.codespell]
# codespell configuration: https://pypi.org/project/codespell
skip = '__pycache__,_build,.mypy_cache,swagger-*.js'
