[build-system]
requires = ["hatchling", "hatch"]
build-backend = "hatchling.build"


[project]
name = "django-modern-rest"
description = "Modern REST framework for Django with types and async support"
license = "MIT"
version = "0.4.0"

authors = [
  {name = "Nikita Sobolev", email = "mail@sobolevn.me"},
  {name = "Alexander Kondratev", email = "mail@kondratev.dev"},
  {name = "Alexey Potapov", email = "me@black-as-ink.ru"},
]

readme = "README.md"
requires-python = ">=3.11"

keywords = [
  "django",
  "django plugin",
  "djangorestframework",
  "django-api",
  "API",
  "REST",
  "wemake-python-package",
]

classifiers = [
  'Programming Language :: Python',
  'Programming Language :: Python :: Implementation :: CPython',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
  'Programming Language :: Python :: 3.14',
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Framework :: Django :: 5.1",
  "Framework :: Django :: 5.2",
  "Framework :: Django :: 6.0",
]

dependencies = [
  "typing_extensions>=4",
  "django>=5.2,<6.1",
]

[project.optional-dependencies]
pydantic = ["pydantic[email,timezone]>=2.12", "pydantic-extra-types"]
msgspec = ["msgspec>=0.19"]
attrs = ["msgspec>=0.19", "attrs>=26.0"]
jwt = ["pyjwt[crypto]>=2.11"]
openapi = ["openapi-spec-validator>=0.8", "polyfactory>=3.2", "pyyaml"]

[project.urls]
Homepage = "https://django-modern-rest.readthedocs.io/en/latest/"
Repository = "https://github.com/wemake-services/django-modern-rest"
Funding = "https://github.com/sponsors/wemake-services"
"Release notes" = "https://github.com/wemake-services/django-modern-rest/releases"

[project.entry-points."pytest11"]
# We need this structure because otherwise `pytest` ruins the coverage report.
# This happens because we have imports in `dmr/__init__.py`
dmr = "dmr_pytest"


[dependency-groups]
# This is a special group, it has special rules.
# It is installed in `cibuildwheel` and must be minimal.
unit-test = [
  "django>=5.2,<6",
  "pytest>=9.0,<10",
  "pytest-cov>=7.0,<8",
  "covdefaults>=2.3,<3",
  "pytest-randomly>=4.0,<5",
  "pytest-django>=4.8,<5",
  "pytest-asyncio>=1.2,<2",
  "pytest-custom-exit-code>=0.3,<0.4",
  "pytest-freezer>=0.4,<0.5",
  "dirty-equals>=0.11,<0.12",
  "faker>=40.1,<41",
  "inline-snapshot>=0.32,<0.33",
  "syrupy>=5.1,<6",
  "polyfactory>=3.2,<4",
  "xmltodict-rs>=0.13,<0.14",
]
dev = [
  { include-group = "unit-test" },
  "django-stubs[compatible-mypy]>=6.0,<6.0.2",
  "types-docutils>=0.22,<0.23",
  "types-setuptools>=82,<83",
  "types-pyyaml>=6.0,<7",
  "pyright>=1.1,<2",
  "pyrefly>=0.57,<0.59",
  "wemake-python-styleguide>=1.6,<2",
  "ruff>=0.15,<0.16",
  "import-linter>=2.5,<3",
  "slotscheck>=0.19,<0.20",
  "dennis>=1.2,<2",
  "schemathesis>=4.14,<5",
  "httpx>=0.28,<0.29",
  "punq>=0.7,<0.8",
]
integration = [
  "tracecov>=0.19,<0.20",
  "pytest-codspeed>=4.3,<5",
]
build = [
  "cibuildwheel==3.4.1",
  "pypyp>=1.3,<2",
  "hatch>=1.6,<2",
]
docs = [
  "sphinx>=9.0,<10",
  "sphinx-autodoc-typehints>=3.0,<4",
  "sphinx-iconify>=0.3,<0.4",
  "sphinx-tabs>=3.5,<4",
  "sphinx-contributors>=0.2,<0.4",
  "sphinx-copybutton>=0.5,<0.6",
  "sphinx-design>=0.7,<0.8",
  "sphinxcontrib-mermaid>=2.0,<3",
  "sphinx-llms-txt>=0.7,<0.8",
  "myst-parser>=5.0,<6",
  "shibuya>=2026.1,<2027",
  "docutils>=0.22,<0.23",

  # Needed for our extension:
  "uvicorn>=0.41,<0.43",
  "zapros==0.5",

  # Needed for examples:
  "xmltodict-rs>=0.13,<0.14",
  "django-mantle>=26.6,<27",
  "punq>=0.7,<0.8",
]


[tool.hatch.build.targets.sdist]
include = [
  "dmr/",
  "dmr_pytest.py",
  "LICENSE",
  "licenses/*.txt",
]

[tool.hatch.build.targets.wheel]
only-include = ["dmr", "dmr_pytest.py"]
macos-max-compat = true

[tool.hatch.build.targets.wheel.hooks.mypyc]
enable-by-default = false
dependencies = ["hatch-mypyc", "mypy==1.19.1"]
include = ["dmr/_compiled"]
require-runtime-dependencies = true
mypy-args = ["--ignore-missing-imports"]
options = { debug_level = "0", opt_level = "3" }


[tool.cibuildwheel]
# Build CPython 3.11-3.14 only; skip 32-bit and musl targets.
build = "cp3{11,12,13,14}-*"
build-frontend = "uv"
build-verbosity = 1
skip = [
  "cp313t-*",
  "*-win32",
]

before-test = [
  'uv export --format requirements.txt --group unit-test --no-group dev --all-extras > _temp.txt',
  'uv pip install -r _temp.txt',
]
test-command = 'pytest {project}/tests/test_unit -o addopts=""'

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
musllinux-x86_64-image = "musllinux_1_2"
before-all = [
  "yum install -y llvm-toolset || yum -v install -y llvm-toolset",
]

[tool.cibuildwheel.environment]
HATCH_BUILD_HOOKS_ENABLE = "1"
CC="clang"

[[tool.cibuildwheel.overrides]]
select = "*musllinux*"
before-all = [
  "apk add --no-cache clang",
]


[tool.ruff]
# Ruff config: https://docs.astral.sh/ruff/settings
preview = true
fix = true
target-version = "py311"
line-length = 80

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint]
select = [
  "A",    # flake8-builtins
  "ASYNC",
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "C90",  # mccabe
  "COM",  # flake8-commas
  "D",    # pydocstyle
  "DTZ",  # flake8-datetimez
  "E",    # pycodestyle
  "ERA",  # flake8-eradicate
  "EXE",  # flake8-executable
  "F",    # pyflakes
  "FBT",  # flake8-boolean-trap
  "FLY",  # pyflint
  "FURB", # refurb
  "G",    # flake8-logging-format
  "I",    # isort
  "ICN",  # flake8-import-conventions
  "ISC",  # flake8-implicit-str-concat
  "LOG",  # flake8-logging
  "N",    # pep8-naming
  "PERF", # perflint
  "PIE",  # flake8-pie
  "PL",   # pylint
  "PT",   # flake8-pytest-style
  "PTH",  # flake8-use-pathlib
  "Q",    # flake8-quotes
  "RET",  # flake8-return
  "RSE",  # flake8-raise
  "RUF",  # ruff
  "S",    # flake8-bandit
  "SIM",  # flake8-simplify
  "SLF",  # flake8-self
  "SLOT", # flake8-slots
  "T100", # flake8-debugger
  "TRY",  # tryceratops
  "UP",   # pyupgrade
  "W",    # pycodestyle
  "YTT",  # flake8-2020
]
ignore = [
  "A005",   # allow to shadow stdlib and builtin module names
  # Different doc rules that we don't really care about:
  "D100",
  "D104",
  "D106",
  "D203",
  "D212",
  "D401",
  "D404",
  "D405",
  "D418",  # We should be able to add docstrings to `@overload` decorators
  "ISC001",  # implicit string concat conflicts with `ruff format`
  "ISC003",  # prefer explicit string concat over implicit concat
  "PLR09",   # we have our own complexity rules
  "PLR2004", # do not report magic numbers
  "PLR6301", # do not require classmethod / staticmethod when self not used
  "PLC0414", # do not raise on `as` re-exports
  "PLW2901", # allow to redefine iteration targets in for loops
  "TRY003",  # long exception messages from `tryceratops`
  "RUF029",  # we decide `async` functions based on API, not `await` usage
  "RUF067",  # wps handles `__init__.py` logic better
]
external = [ "WPS" ]

# Plugin configs:
flake8-quotes.inline-quotes = "single"
mccabe.max-complexity = 6
pydocstyle.convention = "google"

# For `django_test_app` and `docs` only:
isort.known-first-party = ["server", "examples"]

[tool.ruff.lint.per-file-ignores]
# Allow imports inside fixtures:
"dmr_pytest.py" = ["PLC0415"]
# Allow internals access in `django`:
"dmr/internal/django.py" = ["SLF001"]
# Do not require docstrings in test project:
"django_test_app/**/*.py" = ["D10"]
# Ignore many rules in autogenerated migrations:
"dmr/security/jwt/blocklist/migrations/*.py" = ["D101", "E501", "RUF012"]
"django_test_app/server/apps/*/migrations/*.py" = ["D101", "E501", "RUF012"]
# Allow asserts and private name imports and access for tests:
"tests/*.py" = ["S101", "SLF001", "PLC2701", "RUF012"]
# Allow examples to be a bit less strict:
"docs/examples/**/*.py" = ["D1", "S1"]
# Allow benchmarks to not have docs and do scripting:
"benchmarks/**/*.py" = ["D", "S"]
"typesafety/**/*.py" = ["D"]


[tool.pytest.ini_options]
# pytest config: http://doc.pytest.org/en/latest/customize.html
# Strict `@xfail` by default:
xfail_strict = true
# Fail on warnings:
filterwarnings = ["error"]

# Django options:
# https://pytest-django.readthedocs.io/en/latest/
DJANGO_SETTINGS_MODULE = "server.settings"

# PYTHONPATH configuration:
pythonpath = ["django_test_app"]

addopts = [
  "--strict-config",
  "--strict-markers",
  "--doctest-modules",
  "--doctest-glob=*.rst",
  "--doctest-glob=README.md",
  # Output:
  "--tb=short",
  # Coverage:
  "--cov=dmr",
  "--cov=django_test_app",
  "--cov=tests",
  "--cov-report=term-missing:skip-covered",
  "--cov-report=html",
  "--cov-report=xml",
  "--cov-branch",
  "--cov-fail-under=100",
  # Tracecov:
  "--tracecov-format=text,html,markdown",
  "--tracecov-fail-under-operations=100",
  "--tracecov-fail-under-examples=100",
  # TODO: set value to 100
  "--tracecov-fail-under-parameters=90",
  "--tracecov-fail-under-keywords=90",
  "--tracecov-fail-under-responses=50",
  # Ignores benchmarks:
  "--ignore=benchmarks/",
  # Ignores docs:
  "--ignore=docs/conf.py",
  "--ignore=docs/examples/",
  "--ignore=docs/tools/",
  "--ignore=docs/_build/",
  # Ignores typesafety tests:
  "--ignore=typesafety/assert_type",
  # Ignores optional deps:
  "--ignore=dmr/plugins/msgspec",
  # Ignores compiled:
  "--ignore=dmr/_compiled",
]


[tool.coverage.run]
# Covdefaults: https://pypi.org/project/covdefaults
plugins = ["covdefaults"]


[tool.slotscheck]
# https://slotscheck.readthedocs.io/en/latest/configuration.html
strict-imports = false
exclude-modules = '''
(
  dmr\.security\.jwt\.blocklist
  |dmr\.security\.django_session\.views
)
'''


[tool.mypy]
# The mypy configurations: http://bit.ly/2zEl9WI
strict = true
strict_bytes = true
local_partial_types = true
warn_unreachable = true

exclude = [
  # It has its own type-checking setup, since uses django:
  "django_test_app/",
  # We don't care about benchmark code:
  "benchmarks/",
  # We don't care about built docs:
  "docs/_build/",
]

enable_error_code = [
  "truthy-bool",
  "truthy-iterable",
  "redundant-expr",
  "unused-awaitable",
  "ignore-without-code",
  "possibly-undefined",
  "redundant-self",
  "explicit-override",
  "unimported-reveal",
  "deprecated",
]

plugins = [
  "pydantic.mypy",
]

[[tool.mypy.overrides]]
module = "tracecov.*"
follow_untyped_imports = true


[tool.pyright]
# Docs: https://microsoft.github.io/pyright/#/configuration
include = ["dmr", "typesafety", "tests"]
exclude = [
  # It has a lot of ugly code:
  "dmr/internal/django.py",
]
strict = ["dmr/**/*", "typesafety/**/*"]
venvPath = "."
venv = ".venv"


[tool.pyrefly]
# Docs: https://pyrefly.org
project-includes = ["dmr", "typesafety"]


[tool.codespell]
# codespell configuration: https://github.com/codespell-project/codespell
skip = [
  "__pycache__",
  "_build",
  ".mypy_cache",
  "swagger-*.js",
  "dmr/static/*",
  "*.js",
  "*.css",
  "*.min.*",
  "*.msgpack",
  "dmr/locale/**",
  "*.lock",
  "benchmarks/*.json",
]


[tool.typos]
# typos configuration: https://github.com/crate-ci/typos/
files.extend-exclude = [
  "__pycache__",
  "_build",
  ".mypy_cache",
  "swagger-*.js",
  "dmr/static",
  "*.js",
  "*.css",
  "*.min.*",
  "*.msgpack",
  "dmr/locale",
  "*.lock",
  "benchmarks/*.json",
]
default.extend-identifiers = { _SerT = "_SerT" }
